Archive2/b1/7a6e609812c211/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:12: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int out[x+y];
           ^
main.cpp:11:16: error: expected ';' after expression
            i++
               ^
               ;
main.cpp:15:16: error: expected ';' after expression
            j++
               ^
               ;
main.cpp:20:27: error: 'a' declared as array of references of type 'const int &'
int mergeSort(const int& a[],int n){
                          ^
main.cpp:21:14: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int first[n/2];
             ^
main.cpp:22:15: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int second[n - (n/2)];
              ^
main.cpp:23:23: error: expected expression
    if(n==1) return a[];
                      ^
main.cpp:28:9: error: use of undeclared identifier 'last'
        last[i]=a[i];
        ^
main.cpp:30:18: error: no matching function for call to 'mergeSort'
    return merge(mergeSort(first,n/2),n/2,mergeSort(last,n/2-1),n/2-1);
                 ^~~~~~~~~
main.cpp:20:5: note: candidate function not viable: no known conversion from 'int [n / 2]' to 'int' for 1st argument
int mergeSort(const int& a[],int n){
    ^
main.cpp:39:14: error: array type 'int [7]' is not assignable
    unsorted = {1,2,3,2,6,3,1};
    ~~~~~~~~ ^
main.cpp:40:14: error: no matching function for call to 'mergeSort'
    sorted = mergeSort(unsorted,7);
             ^~~~~~~~~
main.cpp:20:5: note: candidate function not viable: no known conversion from 'int [7]' to 'int' for 1st argument
int mergeSort(const int& a[],int n){
    ^
3 warnings and 8 errors generated.
